test/mutation_analysis/s0165_compare_version_numbers/hafis/o3/mutants/2/result.txt
./test/mutation_analysis/s0165_compare_version_numbers/hafis/o3/mutants/2/Solution.java:21: error: unreachable statement
        for (i = 0; false; i++) {
                                ^
1 error
